# cli-printer

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/core/: interfaces.rs  mod.rs  utils.rs  view.rs
src/core/tests/: mod.rs
src/examples/: combine.rs  input.rs  mod.rs  sections_view.rs
src/styles/: mod.rs
src/widgets/: input.rs  list.rs  list_selected.rs  mod.rs  text_block.rs
