[package]
name = "cli_printer"
version = "0.2.0"
edition = "2021"
description="A library for create a cli apps"
license="MIT"
keywords=["cli","input","terminal","term"]
repository="https://github.com/Dreck2003/cli-printer"
readme="README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
